--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -2,4 +2,8 @@
 {
   "editor.formatOnSave": true,
   "tslint.autoFixOnSave": true,
+  "appService.zipIgnorePattern": [
+    "node_modules{,/**}",
+    ".vscode{,/**}"
+  ],
 }
