--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -35,7 +35,9 @@ bower_components
 Thumbs.db
 
 # Ignore built ts files
-dist/**/*
-
+dist
 # ignore yarn.lock
 yarn.lock
+
+# ignore db config
+dbconfig.json
