--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "tslint": "^6.0.0",
-    "typescript": "^3.7.5",
     "husky": "^4.2.1",
     "lint-staged": "^10.0.7",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "tslint": "^6.0.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.7.5"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
@@ -30,10 +31,13 @@
     "@types/body-parser": "^1.17.1",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
+    "@types/express-validator": "^3.0.0",
     "@types/morgan": "^1.7.37",
+    "@types/mysql": "^2.15.8",
     "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "morgan": "^1.9.1"
+    "express-validator": "^6.4.0",
+    "morgan": "^1.9.1",
+    "mysql": "^2.18.1"
   }
 }
