--- a/DiabetesApp/app/src/main/AndroidManifest.xml
+++ b/DiabetesApp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Patient_Login"></activity>
+        <activity android:name=".Patient_Data_Enter"></activity>
+        <activity android:name=".Patient_Login" />
         <activity android:name=".Patient_Signup" />
         <activity android:name=".Doctor_Login" />
         <activity android:name=".Doctor_Signup" />
