--- a/backend/package.json
+++ b/backend/package.json
@@ -28,16 +28,20 @@
     }
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.1",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/express-validator": "^3.0.0",
     "@types/morgan": "^1.7.37",
     "@types/mysql": "^2.15.8",
+    "@types/nodemailer": "^6.4.0",
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "morgan": "^1.9.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.4.2"
   }
 }
