--- a/backend/package.json
+++ b/backend/package.json
@@ -38,8 +38,10 @@
     "@types/nodemailer": "^6.4.0",
     "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "generate-password": "^1.5.1",
     "morgan": "^1.9.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.2"
