Patient info activity. Patient class implements Parcelable

--- a/Doctor_App/app/src/main/AndroidManifest.xml
+++ b/Doctor_App/app/src/main/AndroidManifest.xml
@@ -11,16 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Patient_Data_Enter_Manual"></activity>
-        <activity android:name="com.example.doctor_app.Patient_SignUp_Password" />
-        <activity android:name="com.example.doctor_app.Doctor_Dashboard"
+        <activity android:name=".Info"></activity>
+        <activity android:name=".Patient_Data_Enter_Manual" />
+        <activity android:name=".Patient_SignUp_Password" />
+        <activity
+            android:name=".Doctor_Dashboard"
             android:label="@string/title_activity_doctor_dashboard"
-            android:parentActivityName="com.example.doctor_app.Doctor_Login"></activity>
-        <activity android:name="com.example.doctor_app.Patient_Signup" />
-        <activity android:name="com.example.doctor_app.Doctor_Login"
+            android:parentActivityName=".Doctor_Login" />
+        <activity android:name=".Patient_Signup" />
+        <activity
+            android:name=".Doctor_Login"
             android:label="@string/title_activity_doctor_login"
             android:parentActivityName=".MainActivity" />
-        <activity android:name="com.example.doctor_app.Doctor_Signup" />
+        <activity android:name=".Doctor_Signup" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
