--- a/DiabetesApp/app/src/main/AndroidManifest.xml
+++ b/DiabetesApp/app/src/main/AndroidManifest.xml
@@ -11,20 +11,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Patient_Data_Enter_Manual"></activity>
-        <activity android:name=".Patient_SignUp_Password" />
-        <activity android:name=".Doctor_Dashboard"
-                    android:label="@string/title_activity_doctor_dashboard"
-                    android:parentActivityName=".Doctor_Login"></activity>
+        <activity android:name=".Patient_Data_Submit"></activity>
+        <activity android:name=".Patient_Blood_Pressure_Camera" />
+        <activity android:name=".Patient_Blood_Pressure_Manual" />
+        <activity android:name=".Patient_Data_Enter_Manual" />
+        <activity android:name="com.example.doctor_app.Patient_SignUp_Password" />
+        <activity
+            android:name="com.example.doctor_app.Doctor_Dashboard"
+            android:label="@string/title_activity_doctor_dashboard"
+            android:parentActivityName="com.example.doctor_app.Doctor_Login" />
         <activity android:name=".Patient_Data_Enter_Camera" />
         <activity android:name=".Patient_Input_Password" />
         <activity android:name=".Patient_Data_Enter" />
         <activity android:name=".Patient_Login" />
-        <activity android:name=".Patient_Signup" />
-        <activity android:name=".Doctor_Login"
-                    android:label="@string/title_activity_doctor_login"
-                    android:parentActivityName=".MainActivity" />
-        <activity android:name=".Doctor_Signup" />
+        <activity android:name="com.example.doctor_app.Patient_Signup" />
+        <activity
+            android:name="com.example.doctor_app.Doctor_Login"
+            android:label="@string/title_activity_doctor_login"
+            android:parentActivityName=".MainActivity" />
+        <activity android:name="com.example.doctor_app.Doctor_Signup" />
         <activity
             android:name=".ui.login.Patient_Login"
             android:label="@string/title_activity_patient__login"
