--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "firebase-admin": "^8.9.2",
     "generate-password": "^1.5.1",
     "morgan": "^1.9.1",
     "mysql": "^2.18.1",
