--- a/Doctor_App/app/build.gradle
+++ b/Doctor_App/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.android.gms:play-services-vision:9.8.0'
     implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
