--- a/Doctor_App/app/src/main/AndroidManifest.xml
+++ b/Doctor_App/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.doctor_app">
 
     <uses-permission android:name="android.permission.CAMERA" />
@@ -10,21 +11,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+
         <activity android:name=".Info"></activity>
-        <activity android:name=".Patient_Data_Enter_Manual" />
-        <activity android:name=".Patient_SignUp_Password" />
+        <activity android:name=".PatientSignUpPass" />
         <activity
-            android:name=".Doctor_Dashboard"
+            android:name=".Dashboard"
             android:label="@string/title_activity_doctor_dashboard"
-            android:parentActivityName=".Doctor_Login" />
-        <activity android:name=".Patient_Signup" />
+            android:parentActivityName=".Login" />
+        <activity android:name=".PatientSignUpDetails" />
         <activity
-            android:name=".Doctor_Login"
-            android:label="@string/title_activity_doctor_login"
-            android:parentActivityName=".MainActivity" />
-        <activity android:name=".Doctor_Signup" />
-        <activity android:name=".MainActivity">
+            android:name=".Login"
+            android:label="Doctor App" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,6 +34,7 @@
         <meta-data
             android:name="com.google.android.gms.vision.DEPENDENCIES"
             android:value="ocr" />
+
     </application>
 
 </manifest>
