--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/express-validator": "^3.0.0",
+    "@types/firebase": "^3.2.1",
     "@types/morgan": "^1.7.37",
     "@types/mysql": "^2.15.8",
     "@types/nodemailer": "^6.4.0",
