--- a/DiabetesApp/app/build.gradle
+++ b/DiabetesApp/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.android.gms:play-services-vision:9.8.0'
     implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.android.volley:volley:1.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
