--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
+    "@types/express-handlebars": "^3.1.0",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.8",
     "prettier": "^1.19.1",
@@ -45,6 +46,7 @@
     "crypto-random-string": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "express-validator": "^6.4.0",
     "firebase-admin": "^8.9.2",
     "generate-password": "^1.5.1",
