--- a/Doctor_App/app/src/main/AndroidManifest.xml
+++ b/Doctor_App/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".InfoList"></activity>
+        <activity android:name=".PatientUpdate"></activity>
+        <activity android:name=".InfoList" />
         <activity android:name=".Info" />
         <activity android:name=".PatientSignUpPass" />
         <activity
