--- a/DiabetesApp/app/src/main/AndroidManifest.xml
+++ b/DiabetesApp/app/src/main/AndroidManifest.xml
@@ -14,15 +14,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <service android:name=".InternetService"
-            android:enabled="true"
-            />
+        <activity android:name=".VideoActivity"></activity>
+
+        <service
+            android:name=".InternetService"
+            android:enabled="true" />
+
         <receiver
             android:name=".SensorRestarterBroadcastReceiver"
             android:enabled="true"
             android:exported="true"
-            android:label="RestartServiceWhenStopped">
-        </receiver>
+            android:label="RestartServiceWhenStopped"></receiver>
+
         <activity android:name=".CheckSugarImage" />
         <activity android:name=".CheckImage" />
         <activity
